# onxp-django-modular

./: .gitignore  README.md  dump.rdb  logfile  package.json  pnpm-lock.yaml  pyproject.toml  shell.nix  shell.nix copy
src/app_dashboard/: queries.py  urls.py  views.py
src/app_dashboard/migrations/: 0001_create_book_table.py  0002_pinjam_buku.py
src/app_dashboard/templates/app_dashboard/: beranda.html  index.html  status.html
src/app_landing/: urls.py  views.py
src/app_landing/static/: tailwind.css
src/app_landing/static/app_landing/: style.css  tailwind.css
src/app_landing/templates/app_landing/: about.html  index.html  informasi.html  visi-misi.html
src/django_modular/: settings.py
